// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`1-empty-versions 1`] = `""`;

exports[`2-only-current-version 1`] = `
"# Changelog

## [2.7.14](https://github.com/vuejs/vue/compare/v2.7.13...v2.7.14) (2022-11-09)

### Bug Fixes

a

## [2.7.13](https://github.com/vuejs/vue/compare/v2.7.12...v2.7.13) (2022-10-14)

b

## [2.7.12](https://github.com/vuejs/vue/compare/v2.7.11...v2.7.12) (2022-10-12)
"
`;

exports[`3-not-current-version 1`] = `
"

<!-- Generated by pkg-name-for-test@vpkg-version-for-test, please do not modify manually!! -->

## 其他版本的更新日志
- [v2.x](123.md)

"
`;

exports[`4-has-many-versions 1`] = `
"

<!-- Generated by pkg-name-for-test@vpkg-version-for-test, please do not modify manually!! -->

## 其他版本的更新日志
- [v14.x](456.md)
- [v2.x](123.md)

"
`;

exports[`5-has-ref-versions 1`] = `
"

<!-- Generated by pkg-name-for-test@vpkg-version-for-test, please do not modify manually!! -->

## 其他版本的更新日志
- [v14.x](456.md)
- [v2.x](123.md)

"
`;

exports[`referPreviousChangelog > 1-empty-versions 1`] = `""`;

exports[`referPreviousChangelog > 2-only-current-version 1`] = `
"# Changelog

## [2.7.14](https://github.com/vuejs/vue/compare/v2.7.13...v2.7.14) (2022-11-09)

### Bug Fixes

a

## [2.7.13](https://github.com/vuejs/vue/compare/v2.7.12...v2.7.13) (2022-10-14)

b

## [2.7.12](https://github.com/vuejs/vue/compare/v2.7.11...v2.7.12) (2022-10-12)
"
`;

exports[`referPreviousChangelog > 3-not-current-version 1`] = `
"

<!-- Generated by pkg-name-for-test@vpkg-version-for-test, please do not modify manually!! -->

## 其他版本的更新日志
- [v2.x](123.md)

"
`;

exports[`referPreviousChangelog > 4-has-many-versions 1`] = `
"

<!-- Generated by pkg-name-for-test@vpkg-version-for-test, please do not modify manually!! -->

## 其他版本的更新日志
- [v14.x](456.md)
- [v2.x](123.md)

"
`;
